<resources>
    <string name="app_name">Calm Mom</string>
    <string name="username_label">Email</string>
    <string name="password_label">Password</string>
    <string name="password_repeat_label">Repeat Password</string>
    <string name="login_btn">Login</string>
    <string name="forgotten_pass">Forgotten Password?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="register_btn">Register</string>
    <string name="activity_login_bg_lang">BG</string>
    <string name="activity_login_en_lang">EN</string>
    <string name="activity_login_dialogs_title">Warning</string>
    <string name="activity_login_no_password">Please input your password</string>
    <string name="activity_login_no_email">Please input your email</string>
    <string name="activity_login_pass_reset_email">An email was sent</string>
    <string name="activity_login_pass_reset_title">Password reset</string>
    <string name="name_label">Name</string>
    <string name="age_label">Age</string>
    <string name="height_label">Current height</string>
    <string name="weight_label">Weight at pregnancy start</string>
    <string name="other_illnesses_label">Other illnesses</string>
    <string name="family_history_label">Family history, diseases</string>
    <string name="surgeries_label">Spent surgeries, diagnosis</string>
    <string name="menstruation_label">First day of last menstruation</string>
    <string name="regular_menstruation_label">Regular menstruation?</string>
    <string name="menstruation_length_label">Menstruation cycle length</string>
    <string name="menstruation_duration_label">Duration of the menstruation</string>
    <string name="risk_factor_title">Risk factors</string>
    <string name="risk_factor_smoke">Smoking</string>
    <string name="risk_factor_alcohol">Drinking Alcohol</string>
    <string name="risk_factor_overweight">Overweight</string>
    <string name="risk_factor_age">Age</string>
    <string name="risk_factor_under_feeding">Underfeeding</string>
    <string name="risk_factor_food_allergy">Food Allergy</string>
    <string name="risk_factor_med_allergy">Medicines Allergy</string>
    <string name="first_pregnancy_title">First pregnancy?</string>
    <string name="consecutive_pregnancy">Pregnancy count (including the current one)</string>
    <string name="last_delivery">Date of last delivery</string>
    <string name="kids_alive">Live births (count)</string>
    <string name="kids_dead">Stillborn children (count)</string>
    <string name="kids_premature">Premature babies (count)</string>
    <string name="kids_postterm">Postterm babies (count)</string>
    <string name="sterility">Treated sterility, diagnosis</string>
    <string name="abortions_switch_label">Abortions</string>
    <string name="abortions_desired">As desired (count)</string>
    <string name="abortions_miscarriage">Miscarriages (count)</string>
    <string name="abortions_med_evidence">On medical evidence (count)</string>
    <string name="taken_medicines">Taken medicines before, during the pregnancy</string>
    <string name="unwanted_pregnancy_label">Unwanted Pregnancy</string>
    <string name="blood_group_incompatibility">Blood group incompatibility between parents</string>
    <string name="infectious_diseases">Spent infectious diseases</string>
    <string name="features_complications">Features and complications of previous pregnancies and deliveries</string>
    <string name="info_submit">Save info</string>
    <string name="custom_tip_age">Advanced age could cause fetus damages, therefore it is advised to contact your doctor.</string>
    <string name="custom_tip_smoking">Smoking could damage the fetus. Consult your health care provider for more information.</string>
    <string name="custom_tip_alcohol">Drinking alcohol could damage the fetus. Consult your health care provider for more information.</string>
    <string name="custom_tip_overweight">Being overweight makes it more likely that you\'ll be affected by certain complications. Check with your doctor if something needs to be done.</string>
    <string name="custom_tip_underfeeding">Underfeeding could affect both the pregnant woman and developing baby in the short and long-term, therefore it is advised to contact your doctor.</string>
    <string name="custom_tip_allergy">Tell to your health care provider that you have allergies in order to reduce the risks for you and your baby.</string>
    <string name="custom_tip_blood_groups">When you have a blood group incompatibility with your partner, you need to talk with your doctor about the additional tests that need to be done.</string>
    <string name="custom_tip_family_history">Consult with your health care provider for the risks based on the family history you have.</string>
    <string name="custom_tip_pregnancies_history">Did you consult with your health care provider for the additional tests that need to be done because of your pregnancies history?</string>
    <string name="custom_tip_not_enough_activities">Your weight is increasing but you are not giving information for any activities. Move more to stay healthy.</string>
    <string name="illness_name_label">Title</string>
    <string name="illness_date_label">Reference Date</string>
    <string name="illness_medicines_label">Taken medicines</string>
    <string name="illness_notes_label">Notes</string>
    <string name="illness_remove_item_from_list">Remove item</string>
    <string name="surgery_kind_label">Kind of Surgery</string>
    <string name="surgery_date_label">Reference Date</string>
    <string name="surgery_success_label">Successful?</string>
    <string name="surgery_notes_label">Notes</string>
    <string name="surgery_remove_item_from_list">Remove item</string>
    <string name="fh_what_label">Type</string>
    <string name="fh_notes_label">Notes</string>
    <string name="fh_remove_item_from_list">Remove item</string>
    <string name="title_examinations">Examinations</string>
    <string name="title_questions">Questions</string>
    <string name="title_weight">Weight</string>
    <string name="title_activity">Activities</string>
    <string name="title_medicines">Medicines</string>
    <string name="title_meals">Meals</string>
    <string name="title_water">Water intake</string>
    <string name="title_belly_img">Belly images</string>
    <string name="title_kicks">Kicks</string>
    <string name="title_contractions">Contractions</string>
    <string name="title_themes">All themes</string>
    <string name="title_answered_by_me">Answered by me</string>
    <string name="title_my_themes">My themes</string>
    <string name="ten_days_exaination_title">10 days after the delay</string>
    <string name="seventh_week_examination_title">7th week</string>
    <string name="first_examination_title">12th week</string>
    <string name="first_examination_test1">Hemoglobin, erythrocytes, hematocrit, leukocytes, MCV, MCH, ESR, blood sugar, urine-sediment, urobilinogen, ketones</string>
    <string name="first_examination_test2">Determination of blood group and Rh-factor</string>
    <string name="first_examination_test3">Genotypic ovarian cytoplasm of female genital organs</string>
    <string name="first_examination_test4">Testing for syphilis</string>
    <string name="first_examination_test5">Testing for hepatitis B</string>
    <string name="first_examination_test6">Testing for HIV</string>
    <string name="first_examination_test7">Microbiological examination of the vaginal secretion</string>
    <string name="first_examination_test8">Early biochemical screening</string>
    <string name="first_examination_act1">History of risk factors (age, accompanying illness, complications of previous pregnancies, harmful habits, professional, others)</string>
    <string name="first_examination_act2">Determining the Probable Birth Term</string>
    <string name="first_examination_act3">Arterial blood pressure measurement</string>
    <string name="first_examination_act4">Height measurement</string>
    <string name="first_examination_act5">Body mass measurement</string>
    <string name="first_examination_act6">Gynecological status</string>
    <string name="first_examination_act7">Gynecological echography</string>
    <string name="second_examination_title">16th week</string>
    <string name="second_examination_act1">Arterial blood pressure measurement</string>
    <string name="second_examination_act2">Height measurement</string>
    <string name="second_examination_act3">Body mass measurement</string>
    <string name="second_examination_act4">Gynecological status</string>
    <string name="second_examination_act5">Gynecological echography</string>
    <string name="second_examination_act6">Results discussion</string>
    <string name="second_examination_test1">Late biochemical screening</string>
    <string name="second_examination_test2">Urine culture</string>
    <string name="third_examination_title">20th week</string>
    <string name="third_examination_act1">Arterial blood pressure measurement</string>
    <string name="third_examination_act2">Height measurement</string>
    <string name="third_examination_act3">Body mass measurement</string>
    <string name="third_examination_act4">Fetal cardiac</string>
    <string name="third_examination_act5">Results discussion</string>
    <string name="fourth_examination_title">24th week</string>
    <string name="fourth_examination_test1">Hemoglobin, erythrocytes, hematocrit, leukocytes, MCV, MCH, ESR, blood sugar, urine-sediment, urobilinogen, ketones</string>
    <string name="fourth_examination_act1">Arterial blood pressure measurement</string>
    <string name="fourth_examination_act2">Height measurement</string>
    <string name="fourth_examination_act3">Body mass measurement</string>
    <string name="fourth_examination_act4">Abdominal measurement</string>
    <string name="fourth_examination_act5">Uterus height measurement</string>
    <string name="fourth_examination_act6">Fetal cardiac</string>
    <string name="fourth_examination_act7">Results discussion</string>
    <string name="fifth_examination_title">28th week</string>
    <string name="fifth_examination_act1">Arterial blood pressure measurement</string>
    <string name="dialog_reset_pass_title">Reset password</string>
    <string name="dialog_reset_pass_msg">Please enter your email address in order to receive an email for resetting your password</string>
    <string name="dialog_reset_pass_email_label">Email</string>
    <string name="dialog_reset_pass_cancel">Cancel</string>
    <string name="dialog_reset_pass_send">Send</string>
    <string name="dialog_is_allowed_med_title">Warning</string>
    <string name="dialog_is_allowed_med_msg">Do not forget to consult your doctor for this medicine!</string>
    <string name="dialog_is_allowed_med_add_to_allowed">Add to allowed</string>
    <string name="dialog_is_allowed_med_cancel">Cancel</string>
    <string name="dialog_end_pregnancy_title">End pregnancy</string>
    <string name="dialog_end_pregnancy_outcome">Pregnancy outcome</string>
    <string name="dialog_end_pregnancy_comments">Comments</string>
    <string name="dialog_end_pregnancy_baby_sex">Baby Sex</string>
    <string name="dialog_end_pregnancy_baby_sex_m">Boy</string>
    <string name="dialog_end_pregnancy_baby_sex_f">Girl</string>
    <string name="dialog_end_pregnancy_baby_length">Baby length</string>
    <string name="dialog_end_pregnancy_baby_length_metrix">cm</string>
    <string name="dialog_end_pregnancy_baby_weight">Baby weight</string>
    <string name="dialog_end_pregnancy_baby_weight_metrix">kg</string>
    <string name="dialog_end_pregnancy_baby_name">Baby name</string>
    <string name="dialog_end_pregnancy_hours_of_labour">Hours of labour</string>
    <string name="dialog_end_pregnancy_hours">h</string>
    <string name="dialog_end_pregnancy_complications">Complications / Features</string>
</resources>