<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_weight"
        android:icon="@drawable/weight_selector"
        android:title="@string/title_weight" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/activity_selector"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_medicines"
        android:icon="@drawable/medicines_selector"
        android:title="@string/title_medicines"/>

    <item
        android:id="@+id/navigation_meals"
        android:icon="@drawable/meals_selector"
        android:title="@string/title_meals" />

    <item
        android:id="@+id/navigation_water"
        android:icon="@drawable/water_selector"
        android:title="@string/title_water"/>

    <!--<item-->
        <!--android:id="@+id/navigation_belly_img"-->
        <!--android:icon="@drawable/belly_img_selector"-->
        <!--android:title="@string/title_belly_img" />-->
</menu>