<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/title_view"
        android:text="@string/dialog_reset_pass_title"
        android:textSize="@dimen/warn_dialog_title_text_size"
        android:textColor="@color/colorContrast"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_reset_pass_msg"
            android:textColor="@color/colorContrast"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/dialog_reset_pass_email_label"
            android:textColor="@color/colorContrast"
            android:theme="@style/MyEditTextInDialogTheme"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/warn_dialog_button_height"
        android:layout_marginTop="-45dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/warn_dialog_button_height"
            android:layout_weight="1"
            android:text="@string/dialog_reset_pass_cancel"
            android:gravity="center"
            android:textSize="@dimen/warn_dialog_buttons_text_size"
            android:textColor="@color/colorContrast"
            android:id="@+id/cancel_button"
            android:background="@color/colorAccent"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorContrast"/>

        <TextView
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/warn_dialog_button_height"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/dialog_reset_pass_send"
            android:textColor="@color/colorContrast"
            android:textSize="@dimen/warn_dialog_buttons_text_size" />
    </LinearLayout>



</LinearLayout>