<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/title_view"
        android:text="@string/dialog_is_allowed_med_title"
        android:textSize="@dimen/warn_dialog_title_text_size"
        android:textColor="@color/colorContrast"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_is_allowed_med_msg"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dialog_is_allowed_med_button_height"
        android:layout_marginTop="-35dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/add_to_allowed_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_is_allowed_med_button_height"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/dialog_is_allowed_med_add_to_allowed"
            android:textColor="@color/colorContrast"
            android:textSize="@dimen/warn_dialog_buttons_text_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorContrast"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_is_allowed_med_button_height"
            android:layout_weight="1"
            android:text="@string/dialog_is_allowed_med_cancel"
            android:gravity="center"
            android:textSize="@dimen/warn_dialog_buttons_text_size"
            android:textColor="@color/colorContrast"
            android:id="@+id/cancel_button"
            android:background="@color/colorAccent"/>


    </LinearLayout>



</LinearLayout>